fixed bug, had css overriding visibility options

--- a/style.css
+++ b/style.css
@@ -12,6 +12,25 @@ body{
     font-size: larger;
 }
 
+.score-screen{
+    list-style: none;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.user-score{
+    list-style: none;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+hr{
+    margin: 40px;
+}
+
 .scores{
     cursor: pointer;
     text-decoration: underline;
